# souper-scraper

./: .gitignore  README.md  pyproject.toml  setup.py
src/souperscraper/: __init__.py  _version.py  getchromedriver.py  souperscraper.py
tests/: test_souperscraper.py
