[build-system]
requires = ["setuptools", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Lucas Faudman", email = "lucasfaudman@gmail.com"}]
dynamic = ["version"]
name = "souperscraper"
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE.txt" }
description = "A simple web scraper base combining Beautiful Soup and Selenium"
keywords = ["web-scraping", "scraping", "beautifulsoup4", "beautifulsoup", "bs4", "selenium", "selenium-webdriver"]
dependencies = [
    "selenium",
    "beautifulsoup4",
    "requests",
]

[project.urls]
Homepage = "https://github.com/LucasFaudman/souper-scraper.git"
Repository = "https://github.com/LucasFaudman/souper-scraper.git"

[tool.setuptools]

[tool.setuptools_scm]
version_file = "src/souperscraper/_version.py"

[tool.black]
line-length = 120
